spring-boot-docker/yml/docker-maven-demo-ingress-biggeryunk8s-prod.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: docker-maven-demo-ingress
  name: docker-maven-demo-ingress
spec:
  ports:
    - port: 8080
  selector:
    app: docker-maven-demo-ingress

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: docker-maven-demo-ingress
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: docker-maven-demo-ingress
    spec:
      imagePullSecrets: 
      - name: landa-aliyun-secret
      containers:
      - name: docker-maven-demo-ingress
        image: registry.cn-shanghai.aliyuncs.com/landasoft/landa-mas:spring-boot-docker-latest
#        image: harbor.k8s.landaudev.com/demo/spring-boot-docker
        ports:
        - containerPort: 8080
        resources:
          limits:
            #cpu: "1"             #限制pod申请最大的cpu数量为1个cpu
            memory: 3072Mi        #申请内存最大值 3G
          requests:
            #cpu: "0.5"           #pod申请的cpu数量为0.5个cpu
            memory: 2048Mi        #申请内存的最小值 2G
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-maven-demo-ingress
spec:
  rules:
  - host: docker-maven-demo-ingress.biggerprod.landaudev.com
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-maven-demo-ingress
          servicePort: 8080
