spring-boot-docker/yml/docker-maven-demo-ingress-biggeryunk8s.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: docker-maven-demo-ingress
  name: docker-maven-demo-ingress
spec:
  ports:
    - port: 8080
  selector:
    app: docker-maven-demo-ingress

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: docker-maven-demo-ingress
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: docker-maven-demo-ingress
    spec:
      #nodeName: 10.100.11.114 #指定调度节点为k8s.node 10.100.11.114 10.100.11.115 10.100.11.119
      imagePullSecrets: 
      - name: landa-biggeryun-secret #landa-aliyun-secret 
      containers:
      - name: docker-maven-demo-ingress
        image: harbor.biggerk8s.landaudev.com/landa-mas/spring-boot-docker:latest
#        image: registry.cn-shanghai.aliyuncs.com/landasoft/landa-mas:spring-boot-docker-v0.0.1
        ports:
        - containerPort: 8080
        resources:
          limits:
            #cpu: "1"             #限制pod申请最大的cpu数量为1个cpu
            memory: 3072Mi        #申请内存最大值  3G
          requests:
            #cpu: "0.5"           #pod申请的cpu数量为0.5个cpu
            memory: 2048Mi        #申请内存的最小值 2G  
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-maven-demo-ingress
spec:
  rules:
  - host: docker-maven-demo-ingress.biggerk8s.landaudev.com
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-maven-demo-ingress
          servicePort: 8080
